gitops/firstChart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    target: /
spec:
  rules:
    - host: non-prod-ue1-e2e-1.cf-op.com
      http:
        paths:
          - path: /vitalii-app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  name: http
          - path: /vitalii-app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  name: http
